--- a/style.css
+++ b/style.css
@@ -103,8 +103,16 @@ canvas {
     z-index: 40; 
 }
 
-#list-pares { left: env(safe-area-inset-left, 15px); border-left: 3px solid #00d9ff; }
-#list-impares { right: env(safe-area-inset-right, 15px); border-right: 3px solid #ffcc00; align-items: flex-end; }
+#list-pares { 
+    left: env(safe-area-inset-left, 15px); 
+    border-left: 3px solid #00d9ff; 
+}
+
+#list-impares { 
+    right: env(safe-area-inset-right, 15px); 
+    border-right: 3px solid #ffcc00; 
+    align-items: flex-end; 
+}
 
 .ball-icon { 
     width: 26px; 
